--- a/mongoapi/src/main/resources/application.properties
+++ b/mongoapi/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=mongodbapi
+spring.data.mongodb.username=root
+spring.data.mongodb.password=admin
+spring.data.mongodb.auto-index-creation=true
