--- a/mongoapi/src/main/resources/application.properties
+++ b/mongoapi/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=mongodbapi
+spring.data.mongodb.database=mongodbapitest
+#spring.data.mongodb.database=mongodbapi
 spring.data.mongodb.username=root
 spring.data.mongodb.password=admin
 spring.data.mongodb.auto-index-creation=true
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
